--- a/templet.css
+++ b/templet.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
+*{
+  margin: 0%;
+  padding: 0%;
+}
 body{
   font-family: 'poppins';
     border: none;
@@ -8,14 +12,13 @@ body{
 .sidenav {
     width: 200px;
     z-index: 1;
-    top: 20px;
+    top: -30px;
     left: 10px;
     background: white;
     overflow-x: hidden;
     padding: 8px 0;
-    left: 100px;
+    left: 5%;
     border: 1px solid #10162F;
-    width: 200px;
   }
   
   .sidenav a {
@@ -33,12 +36,8 @@ body{
     background-color: black;
     color: white;
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: flex-start;
-    padding-left: 30%;
-    height: 200px;
-    line-height: 0;
+    padding:3% 23%;
 }  
 .header a{
     text-decoration: none;
@@ -77,7 +76,7 @@ h1{
     color: #000;
   }
   .main{
-    margin-left: 450px;
+    margin:0% 25%;
   }
   .cont .code-toolbar {
     font-size: 1rem;
@@ -105,12 +104,11 @@ div.code-toolbar {
     color: white;
 }
 .topicdiscription{
-  max-width: 650px;
+  max-width: 100%;
   padding-bottom: 20px;
 }
 pre{
-   max-width: 650px;
-    width: 100%;
+   max-width: 100%;
     margin: 10px 0 40px 0px;
     padding: 20px;
     border: 1px solid #ececed;
@@ -152,7 +150,7 @@ code{
 .codeblock>button{
   position: absolute;
   top: 5px;
-  right: 335px;
+  right: 2%;
   outline: 0;
   grid-gap: 8px; 
 align-items: center;
@@ -202,4 +200,42 @@ background-color: #000;
 
 #myBtn:hover {
   background-color: #555; /* Add a dark-grey background on hover */
+}
+
+@media(max-width:600px){
+  h1{
+    font-size: 30px ;
+  }
+  p{
+    font-size: 13px;
+  }
+  .sidenav a{
+    font-size: 10px;
+  }
+  .Scrollbutton{
+    font-size: 10px;
+  }
+  .sidenav{
+    width:130px;
+    top: -10px;
+  }
+  .main{
+    margin: 0% 10%;
+  }
+  pre{
+    font-size: 12px;
+  }
+  h2{
+    font-size: 16px;
+  }
+  .codeblock>button{
+    padding: 4px 6px;
+  }
+  #myBtn{
+    padding: 9px;
+    font-size: 12px;
+  }
+  .header{
+    padding:2% 15%;
+  }
 }
